it doesn't know about getLast for some reason